# slpw24g37

./: CMakeLists.txt  README.md
A1/: Makefile  game.c  game.h  helpers.c  main.c
A2/: CMakeLists.txt  airport.c  definitions.h  resources.h  testing_defines.h
A2/lib/: queue.c  queue.h  vector.c
A3/: A3-37.c  A3-39.c  A3-40-with.c  A3-40-without.c  A3-43-helper.c  A3-43-helper.h  A3-43.c  A3-44.c  A3-45.c  A3-47.c  A3-52.c  A3-53.c  A3-58.c  A3-62.c  A3-65.c  A3-78.c  A3-84.c  A3-86.c  extern.c  extern.h  notes
A4/: Makefile  board.c  board.h  player.c  player.h  util.c  util.h
A5/: Makefile  README.md  malloc.cpp  memory.h  new.cpp  run_tests.sh  util.cpp
A5/tests/: advancedtest.c  exampletest_1.c  exampletest_2.c  mallocAndFreeTest.cpp  newtest.cpp
A6/a_caller/: call_me.c  caller.c  test.txt
A6/b_callee/: main.c  sysv_abi.S
A6/cpuid/: cpuid.c
